[metadata]
name = pykronecker
description = Tools for performing efficient Kronecker product-based matrix operations
long_description = file: README.md
long_description_content_type = text/markdown
author = nickelnine37
version=0.1.3
license = MIT
license_file = LICENSE
url=https://github.com/nickelnine37/pykronecker
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
project_urls =
    Bug Tracker = https://github.com/nickelnine37/pykronecker/issues

[options]
packages =
    pykronecker
install_requires =
    numpy>=1.10
python_requires = >=3.7
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    tox>=3.24
    jax>=0.2.7
    jaxlib>=0.1.57
jax =
    jax>=0.2.7
    jaxlib>=0.1.57

[options.packages.find]
where = src

[options.package_data]
pykronecker = py.typed
